--- a/cfun.adoc
+++ b/cfun.adoc
@@ -3,163 +3,10 @@ Fria El Agua <friaelagua@gmail.com>
 :doctype: book
 :toc:
 
-
-
-== Chapter 1: Compiling and Running
-
-=== Your first program
-.Greet Hello World
-[source,c]
-----
-include::src/HelloWorld.c[]
-----
-
-=== Compiling
-.Compiling the Source Code
-[source,sh]
-----
-gcc HelloWorld.c -o HelloWorld
-----
-
-=== Running
-.Running the Executable
-[source,sh]
-----
-./HelloWorld
-----
-
-
-
-<<<
-
-
-
-== Chapter 2: Basic Data Types
-
-=== Character
-`char` or `signed char` has a range from -128 to 127. +
-`unsigned char` has a range from 0 to 255. +
-Can contain an ascii character or a number.
-
-=== Integer
-`int` or `signed int` has a range from -2,147,483,648 to 2,147,483,647 +
-`unsigned int` has a range from 0 to 4,294,967,295 +
-`signed short int` has a range from -32668 to 32767 +
-`unsigned short int` has a range from 0 to 65535 +
-`long int` has a range from -2,147,483,648 to 2,147,483,647 +
-`long long int` has a range from  -9,223,372,036,854,775,808 to 9,223,372,036,854,775,807.
- +
-Can contain only integers.
-
-=== Float
-`float` Has a range from 1.2E-38 to 3.4E+38 +
-Can contain decimal numbers.
-
-=== Double
-`double` Has a range from 1.7E-308 to 1.7E+308 +
-`long double` Has a range from 3.4E-4932 to 1.1E+4932. +
-Can contain decimal numbers.
-
-
-
-<<<
-
-
-
-== Chapter 3: Basic Input/Output
-
-=== Input
-.Basic Input
-[source,c]
-----
-scanf( fmt, ...args );
-----
-
-=== Output
-.Basic Output
-[source,c]
-----
-printf( fmt, ...args );
-----
-
-=== Format Specifiers
-.Format Specifiers
-|===
-|Format|Definition 
-
-|%c    |char       
-|%d,%i |int        
-|%hd   |short int  
-|%u    |unsigned int        
-|%hu   |unsigned short int        
-|%f    |float      
-|%lf   |double     
-|%llf  |long double
-|%s    |string
-|===
-
-
-
-<<<
-
-
-
-## Chapter 4: Variables
-
-### Printing a Variable
-.Printing a Variable
-----
-include::src/printvar.c[]
-----
-
-### Scanning a Variable
-.Scanning a Variable
-----
-include::src/scanvar.c[]
-----
-
-
-
-<<<
-
-
-
-## Chapter 5: Mathematical Operations
-
-=== Mathematical Operators
-.Mathemathical Operators
-|===
-|Operator|Definition 
-
-|+      |add       
-|-      |subtract        
-|*      |multiply  
-|/      |divide       
-|%      |modulo
-|===
-
-### Basic Math Operations
-.Getting the Average
-----
-include::src/mathoper.c[]
-----
-
-
-
-<<<
-
-
-
-## Chapter 6: Relational Operation
-
-
-
-<<<
-
-
-
-## Chapter 7: Logical Operation
-
-
-
-<<<
+include::chaps/chap01.adoc[]
+include::chaps/chap02.adoc[]
+include::chaps/chap03.adoc[]
+include::chaps/chap04.adoc[]
+include::chaps/chap05.adoc[]
+include::chaps/chap06.adoc[]
+include::chaps/chap07.adoc[]
